--- a/config/config.json
+++ b/config/config.json
@@ -1,11 +1,11 @@
 {
   "development": {
-    "username": "root",
-    "password": null,
-    "database": "database_development",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
-  },
+    "username": "postgres",
+    "password": "secret",
+    "database": "portfolio-project",
+    "host": "localhost",
+    "dialect": "postgres",
+    
   "test": {
     "username": "root",
     "password": null,
