--- a/config/config.json
+++ b/config/config.json
@@ -2,10 +2,10 @@
   "development": {
     "username": "postgres",
     "password": "secret",
-    "database": "portfolio-project",
+    "database": "trip-tracker",
     "host": "localhost",
-    "dialect": "postgres",
-    
+    "dialect": "postgres"
+  },
   "test": {
     "username": "root",
     "password": null,
